--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+
+h1{
+  border-bottom: solid 3px black;
+  padding: 0px 32px;
+  margin: 16px;
+}
+h2{
   text-align: center;
+  font-size: xx-large;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  margin: 32px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  width: 200px;
+  height: 200px;
+  font-size: 130px;
 }
